--- a/css/style.css
+++ b/css/style.css
@@ -6,12 +6,24 @@ html,body{
 }
 #links a{
   padding:10px;
-  float:right;
   text-decoration:none;
   color:#fff;
+  float:right;
 }
 #links a:hover{
     border-bottom-style: solid;
+    border-color:#fff;
+    border-width: 1px;
+}
+#team-link a{
+  padding:10px;
+  padding-bottom: 10px !important;
+  text-decoration:none;
+  color:#fff;
+  
+}
+#team-link a:hover{
+    border-top-style: solid;
     border-color:#fff;
     border-width: 1px;
 }
@@ -19,17 +31,11 @@ html,body{
     width: 50%;
     border-width: 0.7px;
 }
-nav{
+.header-nav{
     background-color: #000;
     height: 40px;
 }
 #particle {
-  /*
-      #cB273f : red
-      #2B273f : blue-purple
-      #2B553f : dark-green
-
-  */
     position:fixed;
     top:0;
     right:0;
@@ -59,19 +65,18 @@ nav{
     overflow-wrap: normal;
     width:100%;
     z-index: -1;
-  }
-  .title{
+  } 
+.title{
     color: #fff;
-  }
-  .upcoming{
+}
+.upcoming{
     color:#fff;
-  }
-  .upcoming-event{
+}
+.upcoming-event{
     color:black;
     border-style: none;
     margin-bottom:20px;
-
-  }
+}
   #mock-parliment{
     Background-color:#0000e5;
   }
@@ -97,3 +102,68 @@ nav{
   #events{
     margin-top: 60px;
   }
+
+/*  compiled scss from https://codepen.io/yoannhel/pen/sJpDj?editors=1100  */
+.content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  height: 150px;
+  overflow: hidden;
+  font-size: 35px;
+  line-height: 80px;
+  color: #ecf0f1;
+}
+.content__container {
+  font-weight: 600;
+  overflow: hidden;
+  height: 35px;
+}
+.content__container__text {
+  display: inline;
+  margin: 0;
+}
+.content__container__list {
+  margin-top: 0;
+  text-align: left;
+  list-style: none;
+  -webkit-animation-name: change;
+  -webkit-animation-duration: 10s;
+  -webkit-animation-iteration-count: infinite;
+  animation-name: change;
+  animation-duration: 10s;
+  animation-iteration-count: infinite;
+}
+.content__container__list__item {
+  line-height: 35px;
+  margin: 0;
+}
+
+@keyframes change {
+  0%, 12.66%, 100% {
+    -webkit-transform: translate3d(0, 0, 0);
+            transform: translate3d(0, 0, 0);
+  }
+  16.66%, 29.32% {
+    -webkit-transform: translate3d(0, -25%, 0);
+            transform: translate3d(0, -25%, 0);
+  }
+  33.32%,45.98% {
+    -webkit-transform: translate3d(0, -50%, 0);
+            transform: translate3d(0, -50%, 0);
+  }
+  49.98%,62.64% {
+    -webkit-transform: translate3d(0, -75%, 0);
+            transform: translate3d(0, -75%, 0);
+  }
+  66.64%,79.3% {
+    -webkit-transform: translate3d(0, -50%, 0);
+            transform: translate3d(0, -50%, 0);
+  }
+  83.3%,95.96% {
+    -webkit-transform: translate3d(0, -25%, 0);
+            transform: translate3d(0, -25%, 0);
+  }
+}
