--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,12 @@
+/* fonts */
 @import url('https://fonts.googleapis.com/css?family=Raleway');
 @import url('https://fonts.googleapis.com/css?family=Cinzel');
+
+/*  avoid using inline styles 
+ *  mention all open source code used
+ *  edit the code to make it more readable
+*/
+
 html,body{
   height:100%;
   font-family: 'Raleway', sans-serif;
@@ -107,29 +114,37 @@ html,body{
 }
 
 /* houses */
-
+.house-logo{
+    max-height:120px;
+    margin:40px;
+}
+#houses{
+    padding-bottom:80px;
+}
 
 /*  about */
 #vision-text{
-  width:80%;
+    margin-left:40px;
+    line-height: 40px;
+    width:80%;
 }
 
 /* todo: change it from tags to their perticular ids */
 ul{
   list-style: none;
 }
-li:before{
-  content: "➔ "
-}
 .mission-item{
   line-height: 40px;
 }
 
 /* contact */
-
 #contact{
-  font-size: 80%;
+    background-color:#000;
+    color:#fff;
+    font-size: 90%;
+    padding-bottom:50px;
 }
+
 /*  compiled scss from https://codepen.io/yoannhel/pen/sJpDj?editors=1100  */
 .content {
   position: absolute;
@@ -143,6 +158,8 @@ li:before{
   line-height: 80px;
   color: #ecf0f1;
 }
+
+/* text - animation - part */
 .content__container {
   font-weight: 600;
   overflow: hidden;
